🐛  fix component visual link overlaping on hover
 #1840

--- a/frontend/scss/components/organisms/component-visual.scss
+++ b/frontend/scss/components/organisms/component-visual.scss
@@ -25,7 +25,7 @@
   }
 
   &-link {
-    margin-top: 3em;
+    margin: 3em 7px 0;
   }
 
   &-image {
